--- a/WEBD.html
+++ b/WEBD.html
@@ -6,6 +6,7 @@
 <center>
 <body style="background-color:#D76F30;">
 <h1><i>PACKETPREP LAUNCHPAD</i> </h1>
+<h3>PacketPrep is a dynamic and innovative company specializing in the development and delivery of comprehensive study materials and resources for various professional certification exams.</h3>
 </center>
 </fieldset>
 </body>
