--- a/WEBD.html
+++ b/WEBD.html
@@ -17,7 +17,8 @@
             height: 100vh;
         }
         fieldset {
-            border: 1;
+            border: 0;
+             background-color: aqua;
         }
         .container {
             text-align: center;
