--- a/WEBD.html
+++ b/WEBD.html
@@ -18,7 +18,7 @@
         }
         fieldset {
             border: 5;
-             background-color: aqua;
+             background-color: #6CEBE8;
         }
         .container {
             text-align: center;
